[gd_scene load_steps=3 format=2]

[ext_resource path="res://components/widgets/ComboBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://components/widgets/FilterWidget.gd" type="Script" id=2]

[node name="FilterWidget" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1304.0
margin_bottom = -1008.0
rect_min_size = Vector2( 0, 72 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_right = 616.0
margin_bottom = 42.0
columns = 4

[node name="Label" type="Label" parent="VBoxContainer/GridContainer"]
margin_right = 194.0
margin_bottom = 14.0
text = "Label"

[node name="Label2" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 198.0
margin_right = 391.0
margin_bottom = 14.0
text = "Operator"

[node name="Label3" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 395.0
margin_right = 588.0
margin_bottom = 14.0
text = "Value"

[node name="Label4" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 592.0
margin_right = 616.0
margin_bottom = 14.0

[node name="Labels" parent="VBoxContainer/GridContainer" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 18.0
margin_right = 194.0
margin_bottom = 42.0
size_flags_horizontal = 3
items = [ "" ]

[node name="Operators" parent="VBoxContainer/GridContainer" instance=ExtResource( 1 )]
margin_left = 198.0
margin_top = 18.0
margin_right = 391.0
margin_bottom = 42.0
size_flags_horizontal = 3
items = [ "=", "!=", "=~", "!~" ]

[node name="Value" parent="VBoxContainer/GridContainer" instance=ExtResource( 1 )]
margin_left = 395.0
margin_top = 18.0
margin_right = 588.0
margin_bottom = 42.0
size_flags_horizontal = 3
items = [ "" ]

[node name="Button" type="Button" parent="VBoxContainer/GridContainer"]
margin_left = 592.0
margin_top = 18.0
margin_right = 616.0
margin_bottom = 42.0
rect_min_size = Vector2( 24, 24 )
text = "+"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 616.0
margin_bottom = 70.0

[connection signal="option_changed" from="VBoxContainer/GridContainer/Labels" to="." method="_on_Labels_option_changed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="focus_exited" from="VBoxContainer/LineEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="text_entered" from="VBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
